--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
@@ -7,7 +8,7 @@ body {
 }
 .container {
   width: 90%;
-  max-width: 500px;
+  max-width: 800px;
   background: linear-gradient(135deg, #00feba, #5b548a);
   color: #fff;
   margin: 100px auto 0;
@@ -82,4 +83,15 @@ body {
     font-size: 28px;
     margin-top: -6px;
 
+}
+.weather{
+    display: block;
+}
+.error {
+    text-align: center;
+    font-weight:400;
+    margin-left: 10px;
+    font-size: 32px;
+    margin-top: 10px;
+    display: none;
 }
