--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
   width: 90vw;
   max-width: 1200px;
-  background: linear-gradient(5deg, #175397, #9cd146);
+  background-color: rgb(28, 113, 153);
   color: #fff;
   margin: 100px auto 0;
   border-radius: 20px;
